--- a/layout.css
+++ b/layout.css
@@ -77,3 +77,17 @@ label {
     color: #7f8c8d;
     font-size: 0.95em;
 }
+
+/* Footer */
+footer {
+    background-color: #2c3e50;
+    color: white;
+    text-align: center;
+    padding: 20px;
+    margin-top: 50px;
+    border-radius: 5px;
+}
+
+footer p {
+    margin: 5px 0;
+}
