--- a/base.css
+++ b/base.css
@@ -4,7 +4,7 @@
 :root {
     --primary-color: #2c3e50;
     --secondary-color: #27ae60;
-    --background-color: #ecf0f1;
+    --background-color: #d4dce5;
     --text-color: #34495e;
     --link-color: #3498db;
 }
